--- a/src/Chat/page-test.css
+++ b/src/Chat/page-test.css
@@ -21,7 +21,6 @@
   display: none;
 }
 
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -79,6 +78,14 @@ hr {
   justify-content: center;
 }
 
+.responsiveP{
+  overflow: hidden;
+  font-weight: 400;
+  line-height: 20px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .formWrapper {
   background-color: white;
   padding: 20px 60px;
@@ -105,7 +112,6 @@ form {
   flex-direction: column;
   gap: 15px;
 }
-
 
 /* button {
   background-color: #7b96ec;
@@ -136,7 +142,6 @@ p {
 }
 
 .home {
-  background-color: #a7bcff;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -233,7 +238,7 @@ p {
   transition: 0.3s ease;
   align-items: center;
   cursor: pointer;
-  gap: 5px;
+  gap: 4%;
 }
 
 .userChat:hover {
@@ -248,8 +253,9 @@ p {
 }
 
 .userChatInfo span {
-  font-size: 18px;
-  font-weight: 500;
+  overflow: hidden;
+  font-size: 17px;
+  font-weight: 400;
 }
 
 .userChatInfo {
@@ -287,7 +293,6 @@ img {
 
 .chatInfo {
   background: #eee;
-  border-radius: 7px;
   margin-right: 0;
   margin-left: 0;
   padding: 10px 15px;
@@ -909,21 +914,29 @@ img {
   }
 }
 
-
-
 /*   */
-.blankPageContainer{
+.blankPageContainer {
   width: 100%;
   display: flex;
   height: 100%;
   align-items: center;
   justify-content: center;
+  background-color: wheat;
+  color: rgba(233, 237, 239, 0.88);
 }
 
-.blankPageCenter{
+.blankPageCenter {
+  /* display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  color: rgba(233, 237, 239, 0.88); */
+
   display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  color: #e9edef;
 }
